<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iPark</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="here">附近的停车场</string>
    <string name="position">目的位置</string>
    <string name="time">到达时间</string>
    <string name="duration">Duration</string>
    <string name="hrs">hrs</string>
    <string name="durationHint">3.0</string>
    <string name="distance">停车场距离</string>
    <string name="kms">kms</string>
    <string name="go">出发</string>
    <string name="detail">统计详情</string>
    <string name="days">日统计</string>
    <string name="periods">时段统计</string>
    <string name="avail">哪里有空位</string>
    <string name="dummy_content">iPark</string>
    
    <string name="title_activity_map">iPark</string>
    <string name="label_park_lot_name">名称：</string>
    <string name="label_park_lot_address">地址：</string>
    <string name="label_park_lot_price">停车价格：</string>
    <string name="label_park_lot_max_num">车位总数：</string>
    <string name="label_park_lot_idle_num">空闲车位：</string>
    <string name="label_park_lot_index">停车指数：</string>
    <string name="title_activity_figure">FigureActivity</string>

</resources>