<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popinfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/view_park_lot_all_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_middle"
        android:padding="@dimen/popup_parking_lot_padding"
        android:paddingBottom="@dimen/popup_parking_lot_padding_bottom"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="7" >

        <TextView android:text="@string/label_park_lot_name" />

        <TextView
            android:id="@+id/view_park_lot_name"
            android:text="" />

        <TextView android:text="@string/label_park_lot_address" />

        <TextView
            android:id="@+id/view_park_lot_address"
            android:text="" />

        <TextView android:text="@string/label_park_lot_price" />

        <TextView
            android:id="@+id/view_park_lot_price"
            android:text="" />

        <TextView android:text="@string/label_park_lot_max_num" />

        <TextView
            android:id="@+id/view_park_lot_max_num"
            android:text="" />

        <TextView android:text="@string/label_park_lot_idle_num" />

        <TextView
            android:id="@+id/view_park_lot_idle_num"
            android:text="" />
        
        <TextView android:text="@string/label_park_lot_index"
            android:textColor="#F00" 
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/view_park_lot_index"
            android:text="" 
            android:textColor="#F00"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/popdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_down"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</LinearLayout>