<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/posLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/searchText"
        android:layout_alignLeft="@+id/linearLayout1"
        android:text="@string/position"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/searchText"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timePicker"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:ems="10"
        android:hint="@string/here"
        android:inputType="textPostalAddress"
        android:singleLine="false" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/searchText"
        android:layout_marginTop="36dp"
        android:text="@string/time"
        android:textSize="20sp" />
        
    <TextView
        android:id="@+id/hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/durationBar"
        android:layout_alignBottom="@+id/durationBar"
        android:layout_alignParentRight="true"
        android:text="@string/hrs"
        android:textSize="20sp" />





    <TextView
        android:id="@+id/distLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/durationLabel"
        android:layout_marginTop="30dp"
        android:text="@string/distance"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/kms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distanceBar"
        android:layout_alignBottom="@+id/distanceBar"
        android:layout_alignParentRight="true"
        android:text="@string/kms"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/timePicker"
        android:layout_marginTop="27dp"
        android:text="@string/duration"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/durationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/durationLabel"
        android:layout_alignLeft="@+id/timePicker"
        android:layout_toLeftOf="@+id/hrs" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_toRightOf="@+id/linearLayout1"
        android:onClick="onSearchParkingClick"
        android:text="GO" />

    <SeekBar
        android:id="@+id/distanceBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/distLabel"
        android:layout_alignLeft="@+id/timePicker"
        android:layout_toLeftOf="@+id/kms" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/timeLabel" />

</RelativeLayout>